	* vc-bzr.el (vc-bzr-dired-state-info): Change name of primitive
	to prettify-state-info, in preparation for ripping out dired mode.
	* vc-hooks.el (vc-toggle-read-only): Throw an error when a user 
	tries this on a version-controlled buffer. it will do useless or 
	actively bad things on any version control system newer than RCS.

2008-05-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-rcs.el (vc-rcs-state): Fix typos.

	* vc.el (vc-register): Change argument order so that the prefix
	argument is assigned correctly.
	(vc-next-action, vc-dir-register): Update for the above change.

2008-05-01  Juri Linkov  <juri@jurta.org>

	* replace.el (occur-read-primary-args): Set default to the car of
	regexp-history and display it in the prompt, but don't add to the
	list of minibuffer defaults.  Bind history-add-new-input to nil to
	not add automatically `default'.  For empty input return `default'.
	Otherwise, add `input' to regexp-history and return it.
	(occur-1): Signal an error for the empty regexp.

	* progmodes/compile.el (compilation-auto-jump):
	Set window point to `pos' explicitly.

2008-05-01  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-bzr.el (vc-bzr-state): Allow this to return 'ignored
	when appropriate.
	* vc-sccs.el (vc-sccs-state): Call vc-sccs-unregistered so
	we report the 'unregistered state reliably.
	* vc-rcs.el (vc-rcs-state): Call vc-rcs-unregistered so
	we report the 'unregistered state reliably.
	* vc-git.el (vc-git-state): Call vc-git-unregistered so
	we report the 'unregistered state reliably.
	* vc-hooks (vc-state): Document that vc-unregistered is
	now expected to be returned reliably.
	* vc.el (vc-default-dired-state): Change needs-patch state to
	needs-update, since the name now shows up in dir-status listings
	and was somewhat misleading.
	* vc-cvs.el (vc-cvs-delete-file): Don't do a "cvs commit"
	immediately after removing the file.
	* vc.el (vc-next-action): More informative messages when a fileset